--- a/index.html
+++ b/index.html
@@ -262,6 +262,43 @@
                 </div>
               </div>
             </li>
+            <!-- TO DO APP -->
+            <li class="projects__item" data-aos="fade-up" id="akademnashr">
+              <img
+                class="projects__img"
+                src=""
+                alt="to-do-app"
+                width="1440"
+                height="674"
+              />
+              <div class="projects__inner">
+                <h3 class="projects__title">To Do App</h3>
+                <p class="projects__info">
+                  Bu loyiha sizga kundalik ishlarni to'g'ri rejalashtirish va
+                  ularni nazorat qilishga ko'maklashadi. Albatta kirib
+                  foydalanishni unutmang.
+                </p>
+                <div class="project-links">
+                  <a
+                    class="project-links__link project-links__link--more"
+                    href="./pages/to-do-app.html"
+                    >Batafsil</a
+                  >
+                  <a
+                    class="project-links__link project-links__link--github"
+                    href="https://github.com/devzafarjon/to-do-app"
+                    target="_blank"
+                    >GitHub</a
+                  >
+                  <a
+                    class="project-links__link project-links__link--netlify"
+                    href="https://to-do-app-selfmade.netlify.app/"
+                    target="_blank"
+                    >Netlify</a
+                  >
+                </div>
+              </div>
+            </li>
           </ul>
         </div>
       </section>
