--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
             <li class="projects__item" data-aos="fade-up" id="akademnashr">
               <img
                 class="projects__img"
-                src=""
+                src="../img/projects/todo.png"
                 alt="to-do-app"
                 width="1440"
                 height="674"
