--- a/pages/to-do-app.html
+++ b/pages/to-do-app.html
@@ -133,7 +133,7 @@
         <div class="container project-info__container">
           <img
             class="project-info__img"
-            src=""
+            src="../img/projects/todo.png"
             alt="Akademnashr"
             width="1100"
             height="500"
